--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
+    "styled-react-modal": "^2.0.1",
     "unform": "^1.2.3",
     "web-vitals": "^1.1.0",
     "yup": "^0.32.9"
