--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-timeago": "^5.2.0",
     "styled-components": "^5.2.1",
     "styled-react-modal": "^2.0.1",
     "unform": "^1.2.3",
