--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "npm run backend-install && npm run start:dev",
+    "start": "npm run backend-install",
     "dev": "concurrently \"npm run dev-frontend\" \"npm run dev-backend\"",
     "dev-frontend": "cd frontend && npm start",
     "dev-backend": "cd backend && npm run start:dev",
     "frontend-install": "cd frontend && npm install",
     "backend-install": "cd backend && npm install",
-    "build-client": "cd client && npm run build && mv build ../backend/build"
+    "build-client": "cd client && npm run build && mv build ../backend/build",
+    "prestart:prod": "cd backend && npm run build",
+    "postinstall": "npm run prestart:prod"
   },
   "repository": {
     "type": "git",
