--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "concurrently": "^6.0.0"
   },
+  "engines": {
+    "node": "14.15.4"
+  },
   "devDependencies": {},
   "scripts": {
     "start": "npm run backend-install",
